日常功能添加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">德城公安</string>
     <string name="confirm">确定</string>
-    <string name="ifly">语音输入beta</string>
+    <string name="ifly">语音输入</string>
     <string name="rememberPassword">记住密码</string>
     <string name="username">姓名：</string>
     <string name="department">录入部门：</string>
